# dataframe-chatbot-streamlit

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: dataset.csv  dataset_2.csv
